--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "eruda.js",
   "scripts": {
     "ci": "npm run lint && npm run test && npm run build",
-    "build": "webpack --config script/webpack.dev.js",
+    "build": "webpack --config script/webpack.dev.js --display-modules",
     "release": "webpack --config script/webpack.release.js --display-modules",
     "cov": "npm run test && remap-istanbul -i coverage/coverage-final.json -o coverage/coverage-remapped.json -t json && node script/coverage",
     "dev": "webpack-dev-server --config script/webpack.dev.js --host 0.0.0.0",
