--- a/package.json
+++ b/package.json
@@ -70,5 +70,8 @@
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.9.7",
     "worker-loader": "^1.1.0"
+  },
+  "dependencies": {
+    "js-base64": "^2.5.1"
   }
 }
